# monitoramento

./: .dockerignore  .env  .gitignore  CHANGELOG.md  CNL_BASE_MONITORAMENTO.xlsx  Dockerfile  app.py  automacao.py  baixar_historico.py  cert.pem  cod_geral_contratos.txt  database.py  debug_login.py  docker-compose.yml  feedback.py  key.pem  log.py  migration_fb.py  pyproject.toml  raio_x_api.py  requirements.txt  share_at_sj.csv  users_sigma.db
.streamlit/: config.toml
dados/: base_atualizada.xlsx
