[project]
name = "monitoramento"
version = "1.3.0"
description = "SigmaOps Application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.9",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.57.0",
]

[dependency-groups]
dev = [
    "firebase-admin>=7.4.0",
]
